development search and reactive elastic repo.
