# src/main/resources/static/openapi.json
@@ -1,40 +1,78 @@
 {
-   "swagger":"2.0",
-   "info":{
-      "description":"An API that can search user support tickets",
-      "version":"1.0.0",
-      "title":"User Suport Tickets Search"
+   "swagger": "2.0",
+   "info": {
+      "description": "An API that can search user support tickets",
+      "version": "1.0.0",
+      "title": "User Suport Tickets Search"
    },
-   "host":"localhost:8080",
-   "basePath":"/v1",
-   "paths":{
-      "/search":{
-         "get":{
-            "summary":"seaerches the user support tickets",
-            "description":"",
-            "operationId":"search",
-            "parameters":[
+   "host": "localhost:8080",
+   "basePath": "/v1",
+   "paths": {
+      "/search": {
+         "get": {
+            "summary": "seaerches the user support tickets",
+            "description": "",
+            "operationId": "search",
+            "parameters": [
                {
-                  "name":"attribute",
-                  "in":"query",
-                  "description":"The name of the attribute that is been searched",
-                  "required":true,
-                  "type":"string"
+                  "name": "attribute",
+                  "in": "query",
+                  "description": "The name of the attribute that is been searched",
+                  "required": true,
+                  "type": "string"
                },
                {
-                  "name":"value",
-                  "in":"query",
-                  "description":"The value to find",
-                  "required":true,
-                  "type":"string"
+                  "name": "value",
+                  "in": "query",
+                  "description": "The value to find",
+                  "required": true,
+                  "type": "string"
                }
             ],
-            "responses":{
-               "200":{
-                  "description":"successful operation"
+            "responses": {
+               "200": {
+                  "description": "successful operation",
+                  "schema": {
+                     "type": "array",
+                     "items": {
+                        "$ref": "#/definitions/Ticket"
+                     }
+                  }
                }
             }
          }
+      }
+   },
+   "definitions": {
+      "Ticket": {
+         "type": "object",
+         "properties": {
+            "id": {
+               "type": "int",
+               "description": "ID"
+            },
+            "priority": {
+               "type": "string",
+               "description": "Priority"
+            },
+            "subject": {
+               "type": "string",
+               "description": "Subject"
+            },
+            "type": {
+               "type": "string",
+               "description": "Type of the Ticket"
+            },
+            "description": {
+               "type": "string",
+               "description": "Description"
+            },
+            "status": {
+               "type": "string",
+               "description": "Status"
+            }
+         }
+
       }
    }
 }
